contestパッケージを去年のロボコン仕様に変更

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -2,9 +2,8 @@ APPL_COBJS +=
 
 APPL_CXXOBJS += \
     StartUp.o \
-    Starter.o \
     Contest.o \
-    display.o \
+    Display.o \
     Touch.o \
     TimeDetection.o \
 
