--- a/src/app.cfg
+++ b/src/app.cfg
@@ -13,8 +13,7 @@ INCLUDE("cppapi.cfg");
 ATT_MOD("app.o");
 
 ATT_MOD("StartUp.o");
-ATT_MOD("Starter.o");
 ATT_MOD("Contest.o");
-ATT_MOD("display.o");
+ATT_MOD("Display.o");
 ATT_MOD("Touch.o");
 ATT_MOD("TimeDetection.o");
